Fix mobile safari not wrapping flex

--- a/app/assets/stylesheets/_components.sass
+++ b/app/assets/stylesheets/_components.sass
@@ -74,7 +74,7 @@ nav.pagination
       white-space: nowrap
       flex-wrap: wrap
       li
-        flex: 1
+        flex: 1 1 auto
         padding: 0 .2rem
       a
         display: block
